k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: freshfarm

spec:
  replicas: 1

  selector:
    matchLabels:
      app: notification-service

  template:
    metadata:
      labels:
        app: notification-service

    spec:
      containers:
        - name: notification-service
          image: aravind53/freshfarm-notification-service:1.0

          ports:
            - containerPort: 5003

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 5003

            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 5003

            initialDelaySeconds: 20
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: freshfarm

spec:
  selector:
    app: notification-service

  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003

  type: ClusterIP
