k8s/gateway.yaml
# ==========================================
# AWS ALB GATEWAY CLASS
# ==========================================

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: freshfarm-alb

spec:
  controllerName: gateway.k8s.aws/alb

---
# ==========================================
# GATEWAY
# ==========================================

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: freshfarm-gateway
  namespace: freshfarm
spec:
  gatewayClassName: freshfarm-alb

  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: freshfarm-alb-config

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same

---
# ==========================================
# HTTP ROUTE
# ==========================================

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freshfarm-route
  namespace: freshfarm
spec:
  parentRefs:
    - name: freshfarm-gateway
      sectionName: http

    - name: freshfarm-gateway
      sectionName: https

  hostnames:
    - "freshfarm.vizagit.space"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: frontend
          port: 80
